--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,7 @@ body {
   font-size: 48px;
   text-align: center;
 }
-#historyIcon {
+#history-icon {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -106,7 +106,7 @@ button {
   font-size: 16px;
   padding: 3px 10px;
 }
-#buzzerButton {
+#buzzer-button {
   width: 80vw;
   height: 80vw;
   max-width: 300px;
@@ -122,10 +122,10 @@ button {
   touch-action: none;
   user-select: none;
 }
-#buzzerButton:active:not(:disabled) {
+#buzzer-button:active:not(:disabled) {
   transform: scale(0.95);
 }
-#buzzerButton:disabled {
+#buzzer-button:disabled {
   pointer-events: none;
   background-color: #cccccc;
   cursor: not-allowed;
@@ -138,7 +138,7 @@ button {
   #teamNameContainer {
     padding-right: 20px;
   }
-  #buzzerButton {
+  #buzzer-button {
     width: 40vw;
     height: 40vw;
   }
@@ -185,7 +185,7 @@ button {
 .userItem > span {
   padding: 3px 10px 3px 0;
 }
-.pendingNameChange {
+.pending-name-change {
   color: orange;
 }
 .tabs {
