--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,15 +20,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin: 0;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: var(--color-heading);
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-heading);
+}
+
+button:active {
+  background-color: var(--color-accent);
 }
 
 /* Main */
@@ -52,7 +56,7 @@ body.page-main {
     cursor: pointer;
   }
   #pressesList {
-    width: 300px;
+    width: max-content;
     max-height: 80vh;
     overflow-y: auto;
     background-color: var(--color-background);
