--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,11 @@
 }
 
 :root {
-  font-size: 16px;
+  font-size: 24px;
+
+  --font-family: "Pirata One", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
 
   --color-primary: #ffffff;
   --color-accent: #f24f13;
@@ -14,12 +18,19 @@
   --color-disabled: #333333;
 }
 
+/* Load the PirataOne-Regular.ttf font */
+@font-face {
+  font-family: "Pirata One";
+  src: url("/fonts/PirataOne-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
+  font-family: var(--font-family);
   background-color: var(--color-background);
   color: var(--color-primary);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
+  font-size: 24px;
   margin: 0;
 }
 
@@ -38,6 +49,7 @@ button {
   border: 1px solid #000;
   border-radius: 0;
   padding: 0.75rem;
+  font-family: var(--font-family);
 }
 
 button:active {
@@ -54,14 +66,14 @@ body.page-main {
   height: 100vh;
 
   #result {
-    font-size: 48px;
+    font-size: 2rem;
     text-align: center;
   }
   #history-icon {
     position: absolute;
     top: 20px;
     right: 20px;
-    font-size: 24px;
+    font-size: 1rem;
     cursor: pointer;
   }
   #pressesList {
@@ -172,7 +184,7 @@ body.page-user {
   }
   #teamDescriptionContainer {
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 1rem;
     color: #999;
     display: none;
   }
@@ -180,26 +192,26 @@ body.page-user {
     cursor: pointer;
   }
   #team-name-input {
-    font-size: 16px;
+    font-size: 1rem;
     padding: 3px;
   }
   #register-button {
-    font-size: 16px;
+    font-size: 1rem;
     padding: 3px 10px;
   }
   #buzzer-button {
-    width: 85vw;
-    height: 85vw;
     background-color: var(--color-accent);
-    border: none;
     border-radius: 100%;
-    font-size: 3rem;
-    font-weight: 800;
+    border: none;
     color: var(--color-background);
     cursor: pointer;
-    transition: transform 0.1s;
+    font-size: 5rem;
+    font-weight: 800;
+    height: 85vw;
     touch-action: none;
+    transition: transform 0.1s;
     user-select: none;
+    width: 85vw;
   }
   #buzzer-button:active:not(:disabled) {
     transform: scale(0.95);
